--- a/taskatHand/taskAtHand.html
+++ b/taskatHand/taskAtHand.html
@@ -10,6 +10,9 @@
     <div id="app">
       <header>Task@Hand</header>
       <div id="main"></div>
+      <div id="add-task">
+        <label for="new-task-name">Add a task</label>
+      </div>
       <footer></footer>
     </div>
   </body>
