--- a/taskatHand/taskAtHand.html
+++ b/taskatHand/taskAtHand.html
@@ -12,7 +12,9 @@
       <div id="main"></div>
       <div id="add-task">
         <label for="new-task-name">Add a task</label>
+        <input type="text" id="new-task-name" title="Enter a task name" placeholder="Enter a task name"/>
       </div>
+      <ul id="task-list">
       <footer></footer>
     </div>
   </body>
