--- a/CSS/index.html
+++ b/CSS/index.html
@@ -6,12 +6,12 @@
 
 <!-- description -->
 	<title>Section 1-CSS Foundations - Mastering CSS</title>
-	
+
 
 <!-- stylesheets -->
 	<link rel="stylesheet" href="css/style.css">
 
-<!-- stylesheets for older browsers -->	
+<!-- stylesheets for older browsers -->
 	<!-- ie6/7 micro clearfix -->
 	<!--[if lte IE 7]>
 		<style>
@@ -26,19 +26,21 @@
 </head>
 <body>
 
-<!-- 
+<!--
 ===============
 Intro section
 ===============
 -->
 <section>
 	<h1>Old Chompy</h1>
+  	<h1>Old Chompy</h1>
+    <h1>Old Chompy</h1>
 	<h2>
 	Dedicated to sharks and other aquatic species</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut recusandae totam iste ad cumque quas, alias explicabo est non placeat facilis vero voluptatibus odio. Quidem deserunt dignissimos, excepturi officiis tempore itaque repellat ipsum voluptatibus suscipit cum, ipsa. At, doloribus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut recusandae totam iste ad cumque quas, alias explicabo est non placeat facilis vero voluptatibus odio. Quidem deserunt dignissimos, excepturi officiis tempore itaque repellat ipsum voluptatibus suscipit cum, ipsa. At, doloribus!</p>
 </section><!-- end section -->
 
-<!-- 
+<!--
 ===============
 Secondary Sections
 ===============
@@ -66,7 +68,7 @@ Secondary Sections
 	</div>
 </section>
 
-<!-- 
+<!--
 ===============
 Alternate Section
 ===============
