--- a/CSS/index.html
+++ b/CSS/index.html
@@ -76,7 +76,7 @@ Alternate Section
 ===============
 -->
 <section>
-	<h1>Feeding Frenzy</h1>
+	<h1 class="alt-headline">Feeding Frenzy</h1>
 	<h2>Sharks never run out of teeth</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis tempore suscipit, expedita neque nemo aperiam ex beatae minima enim aspernatur sunt quidem quaerat! Perspiciatis excepturi perferendis fugiat sint iusto iure et obcaecati numquam, error! Autem expedita deserunt, aperiam facilis reiciendis!</p>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis deleniti impedit nisi voluptatem, nam expedita sit fugit alias non eius harum repellendus labore, illum pariatur sint odit, doloremque dolor magni maxime. Nulla mollitia in maiores molestias, odit quasi, sed totam!</p>
