--- a/CSS/index.html
+++ b/CSS/index.html
@@ -52,7 +52,7 @@ Secondary Sections
 		<figure>
 			<img src="images/octopus-icon.png" alt="Octopus">
 		</figure>
-		<h2>The Octopus</h2>
+		<h2 class="column-title">The Octopus</h2>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quas amet nulla eveniet ratione, facere est assumenda itaque obcaecati adipisci. </p>
 		<a href="#" class="button">Tenticals</a>
 	</div>
