--- a/CSS/index.html
+++ b/CSS/index.html
@@ -32,7 +32,7 @@ Intro section
 ===============
 -->
 <section>
-	<h1>Old Chompy</h1>
+	<h1 id="main-site-title">Old Chompy</h1>
   <span>Inline</span>
   <span>Inline</span>
   <span>Inline</span>
