--- a/floats/shark-movies.html
+++ b/floats/shark-movies.html
@@ -6,11 +6,11 @@
 
 <!-- description -->
 	<title>Movies - Mastering CSS</title>
-	
-<!-- stylesheets -->
-	<link rel="stylesheet" href="css/style.css">
 
-<!-- stylesheets for older browsers -->	
+<!-- stylesheets -->
+	<link rel="stylesheet" href="./css/style.css">
+
+<!-- stylesheets for older browsers -->
 	<!-- ie6/7 micro clearfix -->
 	<!--[if lte IE 7]>
 		<style>
@@ -41,7 +41,7 @@ Intro Section
 			<h1>Best Movies</h1>
 			<h2>From Jaws to Sharknado, these are the best...</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est quis ducimus blanditiis delectus incidunt cumque reprehenderit distinctio aliquid vero itaque!</p>
-			
+
 		</div>
 
 	</div><!-- end wrapper -->
