--- a/floats/shark-movies.html
+++ b/floats/shark-movies.html
@@ -47,7 +47,7 @@ Intro Section
 	</div><!-- end wrapper -->
 </section><!-- end section-1 -->
 
-<section id="jaws" class="content-block style-1 wave-border">
+<section id="jaws" class="content-block">
 	<div class="wrapper">
 		<a href="#" class="figure">
 			<img src="images/jaws.jpg" alt="Jaws movie">
